double round robin

--- a/src/Makefile
+++ b/src/Makefile
@@ -39,7 +39,7 @@ SRCS=		rdkafka.c rdkafka_broker.c rdkafka_msg.c rdkafka_topic.c \
 		rdkafka_partition.c rdkafka_subscription.c \
 		rdkafka_assignment.c \
 		rdkafka_assignor.c rdkafka_range_assignor.c \
-		rdkafka_roundrobin_assignor.c rdkafka_sticky_assignor.c \
+		rdkafka_roundrobin_assignor.c rdkafka_doubleroundrobin_assignor.c rdkafka_sticky_assignor.c \
 		rdkafka_feature.c \
 		rdcrc32.c crc32c.c rdmurmur2.c rdfnv1a.c \
 		rdaddr.c rdrand.c rdlist.c \
